<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTransport"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Transport" />

    <view class="ru.tomatapps.steps.CurrencyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPrice"
        android:layout_gravity="center_horizontal"
        android:hint="@string/Price"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IsDefault"
        android:id="@+id/cbIsDefault" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnCancel"
            android:id="@+id/btnCancel"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnOk"
            android:id="@+id/btnOk"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>